# scatter

./: .gitignore  LICENSE  MANIFEST.in  ReadMe.md  bitbucket-pipelines.yml  create_rose.py  requirements.txt  run_scatter.py  run_scatter_2D.py  run_scatter_gnn.py  run_scatter_rose_2D.py  run_scatter_rose_2D_length.py  run_scatter_rose_3D.py  run_test_2d.py  scatter_env.yml  setup.cfg  tox.ini
.github/workflows/: tests.yml
docs/static/: message.txt
integration_test/Brick_test_heaviside/: run_test.py
integration_test/Brick_test_heaviside_RF/: brick.msh  run_test.py
integration_test/Brick_test_pulse/: run_test.py
integration_test/Brick_test_pulse_RF/: brick.geo  compare_results.py  run_test.py
integration_test/Heaviside_column/: analytical_wave_prop.py  column.msh  (+2 more)
integration_tests/: integration_test.py  test_benchmark_set_2.py
mesh/: box2d.geo  box2d.msh  column.geo  column_2D.geo  column_2D.msh  column_2D_tri3.geo  column_2D_tri6.geo  column_3D_tetra10.geo  column_3D_tetra4.geo  create_mesh.bat  create_mesh_example  embankment_rose.geo  embankment_rose2D.geo  embankment_rose2D.msh  rose_2D_side.geo  rose_2D_side.msh
scatter/: create_rose.py  discretisation.py  element_types.py  export_results.py  force_external.py  material_models.py  mesher.py  post_proc.py  random_fields.py  rose_utils.py  scatter.py  system_matrix.py  utils.py  validator.py
src/: discretisation.py  element_types.py  export_results.py  force_external.py  gen_matrix.py  material_models.py  mesher.py  post_proc.py  random_field.py  random_field_example.py  random_fields.py  rose_utils.py  scatter.py  shape_functions.py  solver.py  system_matrix.py  utils.py
tests/: plot_RF_column.py  test_benckmark_tests.py  test_gen_matrix.py
unit_test/: test_gen_matrix.py  test_solver.py  test_utils.py
(+1234 files in other folders)
