[metadata]
name = scatter
version = 1.1
author = Bruno Zuada Coelho, Aron Noordam
author_email = bruno.zuadacoelho@deltares.nl, aron.noordam@deltares.nl
description = 3D Dynamic FEM model
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: GPLv3
    Operating System :: OS Independent

[options]
packages = scatter
include_package_data = True
install_requires =
    matplotlib>=3.4.2
    numpy>=1.20.3
    scipy>=1.6.2
    tqdm>=4.64.1
    shapely>=1.7.0
    gstools==1.4.0
    VTK-tools@git+https://bitbucket.org/zuada/vtk_tools.git#egg=VTK-tools
    rose@git+https://bitbucket.org/DeltaresGEO/rose.git@0.1#egg=rose
    solvers@git+https://bitbucket.org/DeltaresGEO/solvers.git@0.2#egg=solvers
python_requires = >=3.9.6
