[metadata]
name = scatter
version = 1.2
author = Bruno Zuada Coelho, Aron Noordam
author_email = bruno.zuadacoelho@deltares.nl, aron.noordam@deltares.nl
description = 3D Dynamic FEM model
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3
    Operating System :: OS Independent

[options]
packages = scatter
           docs
include_package_data = True
install_requires =
    matplotlib>=3.4.2
    numpy>=1.20.3
    scipy>=1.6.2
    tqdm>=4.64.1
    shapely>=1.7.0
    gstools>=1.4.0
    VTK-tools@git+https://bitbucket.org/zuada/vtk_tools.git
    rose@git+https://github.com/PlatypusBytes/ROSE.git
    solvers@git+https://github.com/PlatypusBytes/solvers.git
python_requires = >=3.9

[options.extras_require]
testing =
    pytest>=7.2
    pytest-cov>=4.0
